<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.epam.androidlab.task2modulespermissions.MainActivity">

    <TextView
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_label"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tv_to"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etRecipients"
            android:layout_weight="4"
            android:textSize="16sp"
            android:hint="@string/et_recipients"
            android:maxLines="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:text="@string/tv_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etSubject"
            android:layout_weight="4"
            android:hint="@string/et_the_topic"
            android:textSize="16sp"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ScrollView
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <EditText
                android:id="@+id/etMessage"
                android:textSize="16sp"
                android:hint="@string/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    <Button
        android:id="@+id/btnSend"
        android:onClick="onBtnSendClick"
        android:layout_gravity="center"
        android:text="@string/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
